[gd_scene load_steps=6 format=3 uid="uid://cmqq5tee3t843"]

[ext_resource type="Texture2D" uid="uid://d21285ecfpxf7" path="res://customer.png" id="1_ef8t1"]
[ext_resource type="Script" uid="uid://dqp2iv60ci1ts" path="res://ui/upgrade_node.gd" id="2_a3bb2"]
[ext_resource type="Texture2D" uid="uid://c8rlmdkje5782" path="res://upgrade_border.png" id="2_d2xs7"]
[ext_resource type="Theme" uid="uid://du2jkyh4el8aw" path="res://ui/GameSceneTheme.tres" id="4_03nrq"]
[ext_resource type="LabelSettings" uid="uid://cgxq5mw10evav" path="res://ui/LabelSettings/UpgradeNodeLabelSettings.tres" id="5_4kcty"]

[node name="UpgradeNode" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_ef8t1")
stretch_mode = 5
script = ExtResource("2_a3bb2")

[node name="Border" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d2xs7")
stretch_mode = 4

[node name="Popup" type="CenterContainer" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -217.0
offset_top = -388.0
offset_right = 218.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="Popup"]
layout_mode = 2
theme = ExtResource("4_03nrq")

[node name="PopupInfo" type="VBoxContainer" parent="Popup/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Name" type="Label" parent="Popup/PanelContainer/PopupInfo"]
layout_mode = 2
text = "Customers"
label_settings = ExtResource("5_4kcty")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyPerSec" type="Label" parent="Popup/PanelContainer/PopupInfo"]
layout_mode = 2
text = "+$10 a second"
label_settings = ExtResource("5_4kcty")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="Popup/PanelContainer/PopupInfo"]
layout_mode = 2
text = "Lv. 0/10"
label_settings = ExtResource("5_4kcty")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="Label" parent="Popup/PanelContainer/PopupInfo"]
layout_mode = 2
text = "$100"
label_settings = ExtResource("5_4kcty")
horizontal_alignment = 1
vertical_alignment = 1
